timer circle added month and day header zero values not refresh on page added vertical alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,35 @@
 body{
-    font-family: monospace;
-    background-image: url("http://nochdobra.com/wp-content/uploads/2017/12/3.jpg");
-    background-size: cover;
+    font-family: 'Cutive Mono','Anonymous Pro', monospace;
+    background-image: url("https://img3.akspic.ru/image/78824-atmosfera-rozhdestvo-sinij-rozhdestvenskij_den-zima-3840x2400.jpg");
+    height: 100vh;
     background-repeat: no-repeat;
-    background-position: center;
+    background-size: cover ;
+    position: relative;
+    overflow-y: hidden;
 }
 
-div{
-    margin: 0 auto;
+
+
+#timer{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 320px;
-}
-
-button{
-    text-transform: uppercase;
-    align-self: stretch;
-}
-
-#timerValue{
-    font-size: 36px;
+    text-align: center;
+    width: 402px;
+    height: 402px;
+    transform: translate(-50%, -50%);
+    font-size: 42px;
     margin: 0 auto;
     color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border: 2px solid rgba(0,0,0,0.5);
+    border-radius: 50%;
+    flex-flow: column nowrap;
+    justify-content: center;
 }
+
+
+#monthsLeft, #daysLeft{
+    margin-bottom: 20px;
+}
+
